tests/neg-macros/i7013b.scala
import quoted.*

class Foo {
  class Bar
  def foo()(using Quotes) = {
    Type[Bar] // error
  }
}
